pihole/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      dnsPolicy: "ClusterFirst"
      dnsConfig: 
        nameservers:
          - 8.8.8.8
          - 8.0.8.0
      containers:
      - name: pihole
        image: pihole/pihole:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: pihole-etc-volume
          mountPath: "/etc/pihole"
        - name: pihole-dnsmasq-volume
          mountPath: "/etc/dnsmasq.d"
        resources:
          requests:
            memory: 500m
            cpu: 100m 
            ephemeral-storage: 1G
          limits:
            memory: 8G
            cpu: 2000m 
            ephemeral-storage: 2G
      volumes:
      - name: pihole-etc-volume
        persistentVolumeClaim:
          claimName: pihole-etc-claim
      - name: pihole-dnsmasq-volume
        persistentVolumeClaim:
          claimName: pihole-dnsmasq-claim
