pihole/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
spec:
  selector:
    app: pihole
  ports:
  - port: 53
    targetPort: 53
    protocol: TCP
    name: dns-tcp
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dashboard
spec:
  selector:
    app: pihole
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  type: ClusterIP
